Stop columns from collapsing on each other

--- a/rails_curriculum/11_positioning_media_queries/assets/positioning_media_queries.css
+++ b/rails_curriculum/11_positioning_media_queries/assets/positioning_media_queries.css
@@ -110,7 +110,9 @@ label {
 }
 
 /* Media Queries! */
-@media all and (max-width: 900px) {
-/* Code Goes Here */
+@media all and (max-width: 900px) { 
+  .col { 
+    min-width: 500px;
+  }
 }
 
